almost done with the spec runner

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
       
       <!-- Your HTML goes here! -->
     </div>
+    <div id = 'send'> <form> <input class = 'messageBody' type='textbox' value = 'Message here'> <input class = 'submit' type='button' value = 'Submit'> </form> </div>
     <div id = 'chats'></div>
     <div id = 'roomSelect' ></div>
   </body>
